<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto"
            android:inputType="text" />

        <Button
            android:id="@+id/btnTransformar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transformar" />

        <TextView
            android:id="@+id/tvTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCerrarTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_todo" />
    </LinearLayout>
</RelativeLayout>